# playlist-migration

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.envs/.local/: .django  .django.example  .postgres.example
app/: dependencies.py  main.py
app/routers/: users.py
compose/local/django/: Dockerfile  entrypoint  start
compose/local/fastapi/: Dockerfile  entrypoint  start
playlist_migration/: manage.py
playlist_migration/core/: urls.py  views.py
playlist_migration/playlist_migration/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: base.txt  local.txt
